--- a/src/main/resources/static/images/bootstrap-icons-1.11.3/bootstrap-icons.scss
+++ b/src/main/resources/static/images/bootstrap-icons-1.11.3/bootstrap-icons.scss
@@ -1,6 +1,6 @@
 /*!
- * Bootstrap Icons v1.11.1 (https://icons.getbootstrap.com/)
- * Copyright 2019-2023 The Bootstrap Authors
+ * Bootstrap Icons v1.11.3 (https://icons.getbootstrap.com/)
+ * Copyright 2019-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/icons/blob/main/LICENSE)
  */
 
@@ -42,6 +42,7 @@ $bootstrap-icons-map: (
   "box-arrow-in-down-right": "\f1bb",
   "box-arrow-left": "\f1c2",
   "box-arrow-up-left": "\f1c4",
+  "brush": "\f1d8",
   "bucket": "\f1da",
   "bug": "\f1dc",
   "calendar-check": "\f1e2",
