--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -4,12 +4,13 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported	Ruches, buttTxtPrint, buttTxtCol, urlCommLot, selectRuTrait */
+	/* exported	Ruches, buttTxtPrint, buttTxtCol, urlCommLot, selectRuTrait, eveComm */
 	const Ruches = /*[[#{Ruches}]]*/null;
 	const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
 	const buttTxtCol = /*[[#{buttontextcol}]]*/null;
 	const urlCommLot = /*[[@{/evenement/ruche/commentaireLot/}]]*/null;
 	const selectRuTrait = /*[[#{selectruchestraiter}]]*/null;
+	const eveComm = /*[[#{evenementsCommentaire}]]*/null;
 </script>
 </head>
 <body>
