Graphes titre retour vers liste au pluriel

--- a/src/main/resources/templates/ruche/ruchesGraphe.html
+++ b/src/main/resources/templates/ruche/ruchesGraphe.html
@@ -26,7 +26,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/ruche/liste'}" th:text="#{ruche}"></a>
+					<a th:href="@{'/ruche/liste'}" th:text="#{Ruches}"></a>
 					<th:block th:text="#{sep}+#{GrapheNbRuches}"></th:block>
 				</h1>
 			</div>
