--- a/src/main/resources/templates/essaim/essaimsGraphe.html
+++ b/src/main/resources/templates/essaim/essaimsGraphe.html
@@ -26,7 +26,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/essaim/liste'}" th:text="#{essaim}"></a>
+					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
 					<th:block th:text="#{sep}+#{GrapheNbEssaims}"></th:block>
 				</h1>
 			</div>
