--- a/src/main/resources/templates/hausse/hausseGraphePose.html
+++ b/src/main/resources/templates/hausse/hausseGraphePose.html
@@ -28,7 +28,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/hausse/liste'}" th:text="#{hausse}"></a>
+					<a th:href="@{'/hausse/liste'}" th:text="#{Hausses}"></a>
 					<th:block th:text="#{sep}+#{GrapheHaussePose}"></th:block>
 				</h1>
 			</div>
