--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -39,7 +39,7 @@
 					th:title="#{modifier}" aria-hidden="true"></a> &nbsp; <span
 					id="clone" class="bi-collection cursorpointer" th:title="#{cloner}"
 					aria-hidden="true"></span> <a
-					th:href="@{'/ruche/hausses/'+${ruche.id}}" class="bi-justify"
+					th:href="@{'/ruche/hausses/'+${ruche.id}+'/false'}" class="bi-justify"
 					th:title="#{ajoutRetraitHausses}" aria-hidden="true"></a> <a
 					th:href="@{'/ruche/rucher/'+${ruche.id}}" class="bi-house"
 					th:title="#{changerDeRucher}" aria-hidden="true"></a> <a
