--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -57,7 +57,7 @@ document.addEventListener('DOMContentLoaded', () => {
 				<a th:href="@{#{urldoc}+'6867_3218336070'}" class="bi-book"
 					th:title="#{Doc}" target="_blank" aria-hidden="true"></a> <span
 					class="padicons"> <input type="checkbox" id="groupe"
-					th:title="#{grouper}" th:checked="${group}" /> <label for="groupe"
+					th:title="#{grouperJour}" th:checked="${group}" /> <label for="groupe"
 					th:text="#{grouper}"></label>
 				</span>
 			</div>
