--- a/src/main/resources/templates/hausse/hausseGraphePose.html
+++ b/src/main/resources/templates/hausse/hausseGraphePose.html
@@ -9,7 +9,7 @@
 <script th:replace="~{include :: chartjs-adapter}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported dates, nbPosees, datesTotal, nbTotal, datesRec, nbHaussesRec 
+	/* exported dates, nbPosees, datesTotal, nbTotal, datesRec, nbHaussesRec,
 	nbHaussesP, nbHaussesT, recNbHausses */
 	const dates = /*[[${dates}]]*/null;
 	const nbPosees = /*[[${nbPosees}]]*/null;
