--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -7,7 +7,7 @@
 <link th:replace="~{include :: cssdatetimepicker}" />
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script th:inline="javascript">
-	/* exported	_csrf_token, _csrf_param_name, suppRecHauss, dateRecEpoch
+	/* exported	_csrf_token, _csrf_param_name, suppRecHauss, dateRecEpoch,
 	enlevHRecDe30, urlRecHDepot, recId, total, pasDeHausses, pasDeHaussesTxt, DataTable
 	 */
 	const _csrf_token = /*[[${_csrf.token}]]*/null;
