--- a/src/main/resources/templates/ruche/ruchesListeRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListeRucher.html
@@ -4,8 +4,7 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported	Ruches rucher nomrucher buttTxtPrint buttTxtCol DataTable
-	 */
+	/* exported	Ruches, rucher, nomrucher, buttTxtPrint, buttTxtCol, DataTable */
 	const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
 	const buttTxtCol = /*[[#{buttontextcol}]]*/null;
 	const Ruches = /*[[#{Ruches}]]*/null;
