--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -5,7 +5,7 @@
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
 	/* exported google, exportGpx, exportKml, essaims,
-	rucheParcours:writable, distParcours:writable, rucher, rucherMapZoom, longitudeCentre, latitudeCentre,
+	rucheParcours, distParcours, rucher, rucherMapZoom, longitudeCentre, latitudeCentre,
 	  rayonsButinage, distButinage, urlruches, nomHausses, essaimtxt, pasdessaimtxt,
 	  ruchetxt, haussestxt, pasdehaussetxt, ruches, ruchestxt, distancedeparcourstxt,
 	  entreetxt, _csrf_token, distDiminuee, calculEnCours, pasDAmelioration */
