rucher graphique tranhumance ajout récoltes

--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -106,7 +106,7 @@
 					class="bi-truck-front" th:title="#{transhumances}"
 					aria-hidden="true"></a> <a
 					th:href="@{'/rucher/graphtranshum/'+${rucher.id}}"
-					class="bi-graph-up" th:title="#{GrapheNbRuches}" aria-hidden="true"></a>
+					class="bi-graph-up" th:title="#{graphTransh}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
