--- a/src/main/resources/templates/essaim/essaimAssociationForm.html
+++ b/src/main/resources/templates/essaim/essaimAssociationForm.html
@@ -57,7 +57,8 @@
 				<h1 class="item">
 					<a th:href="@{'/essaim/associe/'+${essaimId}}"
 						th:text="#{association}+' '+#{essaim}+' '+${essaim.nom}"></a>
-					<th:block th:text="#{sep}+#{ruche}+' '+${ruche.nom} 
+					<th:block
+						th:text="#{sep}+#{ruche}+' '+${ruche.nom} 
 					  +' ('+#{rucher}+' '+${ruche.rucher.nom}+
 					  (${ruche.essaim}?(', '+#{essaim}+' '+${ruche.essaim.nom}):'')+
 					  ')'"></th:block>
@@ -77,17 +78,18 @@
 		<div th:replace="~{includeForm :: date}"></div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
 		<div class="form-check" th:if="${rucheSource}">
+			<p th:if="${ruche.essaim}"
+				th:text="#{positionRuchesE(${ruche.nom},${ruche.essaim.nom},${ruche.rucher.nom})}"></p>
+			<p th:unless="${ruche.essaim}"
+				th:text="#{positionRuches(${ruche.nom},${ruche.rucher.nom})}"></p>
 			<p
-				th:utext="#{positionRuches(${ruche.nom},${ruche.rucher.nom})} + '<br/>'
-				 + #{positionRuches(${rucheSource.nom},${rucheSource.rucher.nom})}">
-			</p>
-			<input class="form-check-input" type="checkbox" id="swapPositions"
+				th:text="#{positionRuchesE(${rucheSource.nom},${rucheSource.essaim.nom},${rucheSource.rucher.nom})}"></p>
+			<input class="form-check-input" type="checkbox" id="swapPositions" th:checked="${ruche.rucher.depot}"
 				name="swapPositions" /> <label class="form-check-label"
 				for="swapPositions"
 				th:text="#{echangePositionsRuches(${ruche.nom},${rucheSource.nom})}"></label>
 		</div>
-		<br />
-		<br />
+		<br /> <br />
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
