--- a/src/main/resources/templates/essaim/essaimAssociationForm.html
+++ b/src/main/resources/templates/essaim/essaimAssociationForm.html
@@ -2,81 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
 <script th:replace="~{include :: jsdatetimepicker}"></script>
 <link th:replace="~{include :: cssdatetimepicker}" />
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script th:inline="javascript">
-		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/ null;
-		const dateFirst = /*[[${dateFirst}]]*/ null;
-		const timeFirst = /*[[${timeFirst}]]*/ null;
-		const ruche = /*[[${ruche}]]*/ null;
-		const ruchesource = /*[[${rucheSource}]]*/ null;
-		const ruchetxt = /*[[#{ruche}]]*/ null;
-		const lEssaim = /*[[#{Lessaim}]]*/ null;
-		const essaimtxt = /*[[#{essaim}]]*/ null;
-		const essaim = /*[[${essaim}]]*/ null;
-		const resteEnPlace = /*[[#{resteEnPlace}]]*/ null;
-		const estDeplace = /*[[#{estDeplace}]]*/ null;
-		const videDansLeRuher = /*[[#{videDansLeRuher}]]*/ null;
-		const dansLeRucher = /*[[#{dansLeRucher}]]*/ null;
-		document.addEventListener('DOMContentLoaded', () => {
-			const rucherucherid = ruche.rucher?.id;
-			const ruchesourcerucherid = ruchesource?.rucher?.id;
-			const swapCheck = document.getElementById('swapPositions');
-			$.validator.addMethod('greaterThanEqual', function (value, element, param) {
-				return (swapCheck?.checked &&
-					(rucherucherid !== ruchesourcerucherid))
-					? (Date.parse(value) > Date.parse(param)) : true;
-			}, doitEtreSupA + ' {0}');
-			$('#evenementForm').validate({
-				errorClass: 'erreur-form',
-				errorPlacement: function (error, element) {
-					error.insertBefore(element.closest('div'));
-				},
-				rules: {
-					date: {
-						required: true,
-						greaterThanEqual: dateFirst + ' ' + timeFirst
-					},
-					commentaire: {
-						maxlength: 255
-					}
-				}
-			});
-			$('#date').datetimepicker({
-				minDate: false,
-				minTime: false
-			});
-			function swapChange() {
-				const isChk = swapCheck.checked &&
-					(rucherucherid !== ruchesourcerucherid);
-				$('#date').datetimepicker({
-					minDate: isChk ? dateFirst : false,
-					minTime: isChk ? timeFirst : false
-				});
-				afficheEtatEnreg();
-			}
-			if (swapCheck) {swapCheck.addEventListener('change', swapChange);}
-			const etatRucheSource = document.getElementById('etatRucheSource');
-			const deplacementE = document.getElementById('deplacementE');
-			const etrTxt = ruchetxt + ' ' + ruche.nom + ', ' + essaimtxt + ' ' + essaim.nom + ' ' + dansLeRucher + ' ';
-			let etrSTxt, deplTxt;
-			if (ruchesource) {
-				etrSTxt = ruchetxt + ' ' + ruchesource.nom + ' ' + videDansLeRuher + ' ';
-				deplTxt = lEssaim + ' ' + essaim.nom + ' ';
-			}
-			function afficheEtatEnreg() {
-				if (ruchesource) {
-					etatRucheSource.textContent = etrSTxt +
-						(swapCheck.checked?ruche.rucher.nom:ruchesource.rucher.nom);
-					deplacementE.textContent = deplTxt +
-						(swapCheck.checked?resteEnPlace:estDeplace);
-				}
-				etatRuche.textContent = etrTxt + (swapCheck?.checked?ruchesource.rucher.nom:ruche.rucher.nom);
-			}
-			afficheEtatEnreg();
-		});
-	</script>
+	/* exported doitEtreSupA, dateFirst, timeFirst, ruche, ruchesource, ruchetxt,
+	  lEssaim, essaimtxt, essaim, resteEnPlace, estDeplace, videDansLeRuher, dansLeRucher */
+	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/ null;
+	const dateFirst = /*[[${dateFirst}]]*/ null;
+	const timeFirst = /*[[${timeFirst}]]*/ null;
+	const ruche = /*[[${ruche}]]*/ null;
+	const ruchesource = /*[[${rucheSource}]]*/ null;
+	const ruchetxt = /*[[#{ruche}]]*/ null;
+	const lEssaim = /*[[#{Lessaim}]]*/ null;
+	const essaimtxt = /*[[#{essaim}]]*/ null;
+	const essaim = /*[[${essaim}]]*/ null;
+	const resteEnPlace = /*[[#{resteEnPlace}]]*/ null;
+	const estDeplace = /*[[#{estDeplace}]]*/ null;
+	const videDansLeRuher = /*[[#{videDansLeRuher}]]*/ null;
+	const dansLeRucher = /*[[#{dansLeRucher}]]*/ null;
+</script>
 </head>
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
@@ -116,9 +62,9 @@
 				th:text="#{echangePositionsRuches(${ruche.nom},${rucheSource.nom})}"></label>
 		</div>
 		<br />
-		<div th:text="'Si vous enregistrez vous aurez l\'état suivant :'"></div>
+		<div th:text="#{etatEnregistre}"></div>
 		<div th:if="${ruche.essaim}"
-			th:text="#{essaim} + ' ' + ${ruche.essaim.nom} + ' dispersé'"></div>
+			th:text="#{essaim} + ' ' + ${ruche.essaim.nom} + ' ' + #{disperse}"></div>
 		<div th:if="${rucheSource}" id="deplacementE"></div>
 		<div id="etatRuche"></div>
 		<div th:if="${rucheSource}" id="etatRucheSource"></div>
