corrigé bug evenementForm.html sur type eve LIBRE

--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -49,6 +49,7 @@
 			<select class="form-control" th:field="*{type}">
 				<option
 					th:each="typeEvenement : ${T(ooioo.ruches.evenement.TypeEvenement).values()}"
+					th:unless="${typeEvenement == T(ooioo.ruches.evenement.TypeEvenement).LIBRE}"
 					th:value="${typeEvenement}" th:text="#{${typeEvenement}}"></option>
 			</select> <label class="form-label" for="typeEvenement"
 				th:text="#{typeEvenement}"></label>
