--- a/src/main/resources/templates/essaim/essaimDispersionLotForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionLotForm.html
@@ -51,9 +51,18 @@
 				name="evencadre" checked /> <label class="form-check-label"
 				for="evencadre" th:text="#{creationevecadrezero}"></label>
 		</div>
-		<div th:replace="~{includeForm :: date}"></div>
-		<div th:replace="~{includeForm :: commentaire}"></div>
-		<div th:replace="~{includeForm :: BtnForm}"></div>
+		<fieldset class="border rounded-3 p-3">
+			<div class="form-floating mb-3">
+				<select class="form-control" id="sortie" name="sortie">
+					<option
+						th:each="sortie : ${T(ooioo.ruches.essaim.ReineSortie).values()}"
+						th:value="${sortie}" th:text="#{${sortie}}"></option>
+				</select> <label class="form-label" for="sortie" th:text="#{sortie}"></label>
+			</div>
+			<div th:replace="~{includeForm :: date}"></div>
+			<div th:replace="~{includeForm :: commentaire}"></div>
+			<div th:replace="~{includeForm :: BtnForm}"></div>
+		</fieldset>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
 </body>
